fix scrollbar

--- a/access/css/style.css
+++ b/access/css/style.css
@@ -37,6 +37,14 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+.header--overflow::-webkit-scrollbar{
+  width: 0;
+  height: 0;
+}
+.header__scroll::-webkit-scrollbar{
+  width: 0;
+  height: 0;
+}
 .sub__icons {
   display: inline-flex;
 }
@@ -86,6 +94,16 @@ a {
     padding-right: 0px;
   }
 }
+@media (min-width: 768px) {
+  .description__text {
+    flex: 0 1 50%;
+  }
+  .description__arrow {
+  }
+  .description__img {
+    flex: 0 1 50%;
+  }
+}
 @media (min-width: 1120px) {
   .icon--repair {
     white-space: nowrap;
@@ -130,16 +148,38 @@ a {
   margin: 15px;
   width: 1100px;
 }
-.header__scroll{
+.header__scroll {
   overflow: scroll;
 }
 .menu__icon {
 }
-.description {
+.wrapper {
+  max-width: 1120px;
+  margin: 0 auto;
 }
-.description__text {
+.description {
+  margin: 0 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+#cut[type="checkbox"] .text--cut{
+  width: 20px;
+  height: 20px;
+}
+
+.text--сut {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 7;
+  overflow: hidden;
 }
 .description__arrow {
+  color: black;
 }
 .description__img {
+  /* flex: 0 1 50%; */
+}
+.description__img img {
+  width: 100%;
+  display: block;
 }
